fix: detail-status, edit-visibleScope, all_list

--- a/src/assets/css/marketDetail.css
+++ b/src/assets/css/marketDetail.css
@@ -228,11 +228,21 @@
     object-fit: cover;
     /* 이미지 비율 유지 */
     margin-left: 10px;
+    cursor: pointer;
 }
 
+.user_image:hover {
+    transform: translateY(-4px);
+}
+  
 .user_info {
     display: flex;
     flex-direction: column;
+    cursor: pointer;
+}
+
+.user_info:hover {
+    transform: translateY(-4px);
 }
 
 .user_nickname {
